🩹 Fix dark code readability

--- a/less/variables.less
+++ b/less/variables.less
@@ -28,7 +28,8 @@
   // Text color
 
   // Code
-  @fedorafr-code-border: #073642;
+  @code-bg: #282c34;
+  @fedorafr-code-border: #999;
 
   // Quote
   @fedorafr-quote-border: @config-primary-color;
